# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import mentorApplicationsRouter from "./mentor-applications";
 import mentorsRouter from "./mentors";
 import jobListingsRouter from "./job-listings";
 import startupApplicationsRouter from "./startup-applications";
+import creativeWorksRouter from "./creative-works";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(mentorApplicationsRouter);
 router.use(mentorsRouter);
 router.use(jobListingsRouter);
 router.use(startupApplicationsRouter);
+router.use(creativeWorksRouter);
 
 export default router;
