# lib/db/src/schema/index.ts
@@ -3,3 +3,5 @@ export * from "./mentors";
 export * from "./mentor-articles";
 export * from "./startup-applications";
 export * from "./job-listings";
+export * from "./creative-works";
+export * from "./creative-episodes";
